created media-query file

--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/media-query.css">
-    <link rel="stylesheet" href="styles/media-query-large.css">
+    <link rel="stylesheet" href="/week02/styles/media-query.css">
+    <link rel="stylesheet" href="/week02/styles/media-query-large.css">
 </head>
 <body>
     <header> 
@@ -24,7 +24,7 @@
         
         <section>
             <h2>1Nephi 3:7</h2>
-            <p>And it came to pass that I, Nephi, said unto my father: I will go and do the things which the Lord hath commanded, for I know that the Lord giveth no bcommandments unto the children of men, save he shall cprepare a way for them that they may accomplish the thing which he commandeth them.</p>
+            <p>And it came to pass that I, Nephi, said unto my father: I will go and do the things which the Lord hath commanded, for I know that the Lord giveth no commandments unto the children of men, save he shall prepare a way for them that they may accomplish the thing which he commandeth them.</p>
         </section>
     </main>
     <footer>
