--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/layout.css">
-    <title>Sizwe Aquill Xolani <Mkhize-WDD130></Mkhize-WDD130></title>
+    <title>Sizwe Aquill Xolani Mkhize - WDD131</title>
 </head>
 <body>
     <header>
-        <h1 contenteditable>Header Content</h1>
-    </header>
+        <h1 contenteditable>Header Content</h1> <br>
+    
     <nav>
         <ul>
          <li><a href="">Home</a></li>
@@ -18,6 +18,7 @@
          <li><a href="">Contact Us</a></li>  
         </ul>
         </nav>
+    </header>
     <main contenteditable>Main Content </main>
     <div class="aside" contenteditable>Aside Content</div>
     <footer contenteditable>Footer Content</footer>
