added few changes on html file

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -18,11 +18,11 @@
         <title>Temple Album</title>
 </head>
 
-<body>
+  <body>
     <header>
         <h1>TEMPLE  ALBUM</h1>
         <nav class="navigation">
-            <ul id="menu">
+            <ul class="menu">
                 <li><a class="active" href="temples.html">Home</a></li>
                 <li><a href="">Old</a></li>
                 <li><a href="">New</a></li>
@@ -33,9 +33,9 @@
         </nav>
     </header>
     <main>
-     <section class="main" >
-        <div>
-        <h2 class="std1f" >Durban South Africa Temple</h2>
+     <section>
+        <div class="images_container">
+        <h2 class="images_title">Durban South Africa Temple</h2>
         <figure>
             <img src="images/durban_temple.jpg"    alt="Durban Temple"   width="250"   height="167">
         <figcaption>Durban South Africa Temple</figcaption>
