minor changes in different files

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -81,7 +81,7 @@
         <p>&copy; <span id="year"></span> Sizwe Mkhize. All rights reserved.</p>
     <p>Last updated: <span id="lastModified"></span></p>
     </footer>
-    <script defer src="scripts/temples.js"></script>
+    <script defer src="/week02/scripts/temple.js"></script>
     
 </body>
 
