--- a/week03/place.html
+++ b/week03/place.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Place Page</title>
-  <link rel="stylesheet" href="styles/place.css">
+  <link rel="stylesheet" href="/week03/place.css">
+  <link rel="stylesheet" href="/week03/place-large.css">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
   <header>
     <picture>
       <source srcset="hero-large.webp" media="(min-width: 768px)">
-      <img src="/geraffe.webp" alt="Hero image for the place">
+      <img src="images/zebra.webp" alt="Hero image for the place">
     </picture>
   </header>
 
