--- a/week02/temples.html
+++ b/week02/temples.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Temples album of the Church of Jesus Christ of Latter Day Saints">
     <meta name="author" content="Sizwe Mkhize">
-    <link rel="JavaScript " href="scripts/getDates.js">
+    <link rel="JavaScript " href="scripts/temple.js">
     <script src="https://kit.fontawesome.com/d3e2d132ae.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,23 +14,23 @@
         rel="stylesheet">
         <link rel="stylesheet" href="styles/temples.css">
         <link rel="stylesheet" href="styles/temples-large.css">
-        <script defer src="scripts/temples.js"></script>
+        <script src="scripts/temples.js"></script>
         <title>Temple Album</title>
 </head>
 
   <body>
     <header>
-        <h1>TEMPLE  ALBUM</h1>
+        <p><h1>TEMPLE  ALBUM</h1></p>
         <nav class="navigation">
+                
             <ul class="menu">
                 <li><a class="active" href="temples.html">Home</a></li>
                 <li><a href="">Old</a></li>
                 <li><a href="">New</a></li>
-                <li><a href="">Large</a></li>
                 <li><a href="">Small</a></li>
+                <li><a href="">Large</a></li>
             </ul>
-            <button class="hamburger" aria-label="Menu">&#9776;</button>
-        </nav>
+            </nav>
     </header>
     <main>
      <section>
