made changes on temples.html

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -37,40 +37,40 @@
         <div class="images_container">
         <h2 class="images_title">Durban South Africa Temple</h2>
         <figure>
-            <img src="images/durban_temple.jpg"    alt="Durban Temple"   width="250"   height="167">
+            <img src="images/durban_temple.webp"    alt="Durban Temple"   width="250"   height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
         <figure>
-            <img  src="images/durban_temple.jpg"    alt="Durban Temple"   width="250"  height="167">
+            <img  src="images/durban_temple.webp"    alt="Durban Temple"   width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"   alt="Durban Temple"  width="250"   height="167">
+        <figure><img src="images/durban_temple.webp"   alt="Durban Temple"  width="250"   height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"   alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.webp"   alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"    alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.webp"    alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"    alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.webp"    alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"    alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.webp"    alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"    alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.webp"    alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.jpg"  alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.webp"  alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
      </div>
