--- a/week02/temples.html
+++ b/week02/temples.html
@@ -70,7 +70,7 @@
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
 
-        <figure><img src="images/durban_temple.webp"  alt="Durban Temple"  width="250"  height="167">
+        <figure><img src="images/durban_temple.jpg"  alt="Durban Temple"  width="250"  height="167">
         <figcaption>Durban South Africa Temple</figcaption>
         </figure>
      </div>
