--- a/week03/place.html
+++ b/week03/place.html
@@ -20,7 +20,7 @@
     <picture id="hero-small" >
       <source srcset="hero-small.webp" media="(min-width: 500px)">
       <source srcset="hero-large.webp" media="(min-width: 768px)">
-      <img src="/week03/images/zebra.webp" alt="Hero image for the place" width="" height="">
+      <img src="/week03/images/zebra.webp" alt="Zebras in the wild" width="200" height="300">
       
     </picture> 
   </header>
