--- a/week03/place.html
+++ b/week03/place.html
@@ -33,13 +33,13 @@
       <h2>Data</h2>
       
       <p>Area: <span>1, 221 037 square kilometers</span></p>
-      <p>Population:<span class="Population">62 million </span></p>
-      <p>Capital:<span class="Capital">Pretoria</span></p>
-      <p>Languages:<span class="Languages">Zulu,Xhosa,Ndebele,Sotho,Tswana,Vhenda,Tsonga, English,Afrikaans,Pedi,</span></p>
-      <p>Currency:<span class="Currency">South African Rand</span></p>
-      <p>Time Zone:<span class="time-zone">UTC+2</span></p>
-      <p>Calling Code:<span class="calling-code">+27</span></p>
-      <p>Internet TLD:<span class="internet-tld">za</span></p>
+      <p>Population: <span class="Population">62 million </span></p>
+      <p>Capital: <span class="Capital">Pretoria</span></p>
+      <p>Languages: <span class="Languages">Zulu,Xhosa,Ndebele,Sotho,Tswana,Vhenda,Tsonga, English,Afrikaans,Pedi,</span></p>
+      <p>Currency: <span class="Currency">South African Rand</span></p>
+      <p>Time Zone: <span class="time-zone">UTC+2</span></p>
+      <p>Calling Code: <span class="calling-code">+27</span></p>
+      <p>Internet TLD: <span class="internet-tld">za</span></p>
            
     </section>
 
@@ -56,7 +56,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; <span id="current-year"></span>. Last modified: <span id="last-modified"></span></p>
+    <p>&copy; <span id="current-year"></span> Sizwe Aquill Xolani Mkhize <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
   </footer>
 
   <script src="scripts/place.js" defer></script>
