added other changes

--- a/week03/place.html
+++ b/week03/place.html
@@ -8,7 +8,7 @@
     <link rel="JavaScript " href="scripts/place.js">
     <script src="https://kit.fontawesome.com/d3e2d132ae.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <title>Place Page</title>
     <link rel="stylesheet" href="/week03/place.css">
     <link rel="stylesheet" href="/week03/place-large.css">
