added some changes on css and html files

--- a/week03/place.html
+++ b/week03/place.html
@@ -56,7 +56,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; <span id="current-year"></span> Sizwe Aquill Xolani Mkhize <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
+    <p>&copy; <span id="current-year"></span><img src="/week03/images/rsaflag01.png" alt=""> Sizwe Aquill Xolani Mkhize <img src="/week03/images/rsaflag01.png" alt=""> <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
   </footer>
 
   <script src="scripts/place.js" defer></script>
