edited images path

--- a/week03/place.html
+++ b/week03/place.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <title>Place Page</title>
-    <link rel="stylesheet" href="/week03/place.css">
-    <link rel="stylesheet" href="/week03/place-large.css">
+    <link rel="stylesheet" href="place.css">
+    <link rel="stylesheet" href="place-large.css">
 </head>
 <body>
   
@@ -21,7 +21,7 @@
     <picture id="hero-small" >
       <source srcset="hero-small.webp" media="(min-width: 500px)">
       <source srcset="hero-large.webp" media="(min-width: 768px)">
-      <img src="/week03/images/zebra.webp" alt="Zebras in the wild" width="200" height="300">
+      <img src="images/zebra.webp" alt="Zebras in the wild" width="200" height="300">
       
     </picture>
      
@@ -56,7 +56,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; <span id="current-year"></span><img src="/week03/images/rsaflag01.png" alt=""> Sizwe Aquill Xolani Mkhize <img src="/week03/images/rsaflag01.png" alt=""> <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
+    <p>&copy; <span id="current-year"></span> <img src="images/rsaflag01.png" alt=""> Sizwe Aquill Xolani Mkhize <img src="images/rsaflag01.png" alt=""> <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
   </footer>
 
   <script src="scripts/place.js" defer></script>
