--- a/week03/place.html
+++ b/week03/place.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Temples album of the Church of Jesus Christ of Latter Day Saints">
+    <meta name="description" content="country">
     <meta name="author" content="Sizwe Mkhize">
     <link rel="JavaScript " href="scripts/place.js">
     <script src="https://kit.fontawesome.com/d3e2d132ae.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
     <picture id="hero-small" >
       <source srcset="hero-small.webp" media="(min-width: 500px)">
       <source srcset="hero-large.webp" media="(min-width: 768px)">
-      <img src="images/zebra.webp" alt="Zebras in the wild" width="200" height="300">
+      <img src="images/zebra.webp" alt="Zebras in the wild" width="" height="">
       
     </picture>
      
@@ -35,7 +35,7 @@
       <p>Area: <span>1, 221 037 square kilometers</span></p>
       <p>Population: <span class="Population">62 million </span></p>
       <p>Capital: <span class="Capital">Pretoria</span></p>
-      <p>Languages: <span class="Languages">Zulu,Xhosa,Ndebele,Sotho,Tswana,Vhenda,Tsonga, English,Afrikaans,Pedi,</span></p>
+      <p>Languages: <span class="Languages">Zulu, Xhosa, Ndebele, Sotho,Tswana, Vhenda,Tsonga, English, Afrikaans, Khoi san and Pedi,</span></p>
       <p>Currency: <span class="Currency">South African Rand</span></p>
       <p>Time Zone: <span class="time-zone">UTC+2</span></p>
       <p>Calling Code: <span class="calling-code">+27</span></p>
