--- a/week03/place.html
+++ b/week03/place.html
@@ -7,11 +7,9 @@
     <meta name="author" content="Sizwe Mkhize">
     <link rel="JavaScript " href="scripts/place.js">
     <script src="https://kit.fontawesome.com/d3e2d132ae.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
-    <title>Place Page</title>
     <link rel="stylesheet" href="place.css">
     <link rel="stylesheet" href="place-large.css">
+    <title>South Africa Page</title>
 </head>
 <body>
   
