--- a/week03/place.html
+++ b/week03/place.html
@@ -7,9 +7,11 @@
     <meta name="author" content="Sizwe Mkhize">
     <link rel="JavaScript " href="scripts/place.js">
     <script src="https://kit.fontawesome.com/d3e2d132ae.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+    <title>Place Page</title>
     <link rel="stylesheet" href="place.css">
     <link rel="stylesheet" href="place-large.css">
-    <title>South Africa Page</title>
 </head>
 <body>
   
@@ -19,7 +21,7 @@
     <picture id="hero-small" >
       <source srcset="hero-small.webp" media="(min-width: 500px)">
       <source srcset="hero-large.webp" media="(min-width: 768px)">
-      <img src="images/zebra.webp" alt="Zebras in the wild" width="" height="">
+      <img src="images/zebra.webp" alt="Zebras in the wild" >
       
     </picture>
      
