--- a/week03/place.html
+++ b/week03/place.html
@@ -21,7 +21,7 @@
     <picture id="hero-small" >
       <source srcset="images/rsz_1geraffe.webp" media="(min-width: 768px)">
       <source srcset="images\rsz_1rsz_1zoe-reeve-9hsejnboety-unsplash.webp" media="(min-width: 1024px)">
-      <img src="/images/rsz_2marcus-lofvenberg-ccfqph5wi6c-unsplash.jpg" alt="Zebras in the wild" >
+      <img src="images/rsz_1zebra.jpg" alt="Zebras in the wild" >
     </picture>
      
   </header>
@@ -55,7 +55,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; <span id="current-year"></span> <img src="images/rsz_rsaflag01.webp" alt=""> Sizwe Aquill Xolani Mkhize <img src="images/rsz_rsaflag01.webp" alt=""> <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
+    <p>&copy; <span id="current-year"></span> <img src="images/rsz_rsaflag01.png" alt=""> Sizwe Aquill Xolani Mkhize <img src="images/rsz_rsaflag01.png" alt=""> <br> South Africa <br>Last modified: <span id="last-modified"></span></p>
   </footer>
 
   <script src="scripts/place.js" defer></script>
