corrected some mistakes

--- a/week03/place.html
+++ b/week03/place.html
@@ -20,7 +20,7 @@
       
     <picture id="hero-small" >
       <source srcset="images/rsz_1geraffe.webp" media="(min-width: 768px)">
-      <source srcset="images\rsz_1rsz_1zoe-reeve-9hsejnboety-unsplash.webp" media="(min-width: 1024px)">
+      <source srcset="images/rsz_1rsz_1zoe-reeve-9hsejnboety-unsplash.webp" media="(min-width: 1024px)">
       <img src="images/rsz_1zebra.jpg" alt="Zebras in the wild" >
     </picture>
      
@@ -45,7 +45,7 @@
     <!-- Weather Section -->
 
     <section id="weather">
-      <h2>Weather <span class="weather-icon">⛅</span></h2>
+      <h2>Weather ⛅<span class="weather-icon">⛅</span></h2>
       <p>Temperature: <span id="temp">15</span>°C</p>
       <p>Wind Speed: <span id="wind-speed">6.0</span> km/h</p>
       <p>Wind Chill: <span id="wind-chill">N/A</span></p>
