converted images type

--- a/week03/place.html
+++ b/week03/place.html
@@ -19,7 +19,7 @@
     <h1><b> South Africa</b></h1>
       
     <picture id="hero-small" >
-      <source srcset="images/rsz_1geraffe.webp" media="(min-width: 768px)">
+      <source srcset="images/rsz_1geraffe.webp" media="(min-width: 740px)" width="400px" height="600px">
       <source srcset="images/rsz_1rsz_1zoe-reeve-9hsejnboety-unsplash.webp" media="(min-width: 1024px)">
       <img src="images/rsz_1zebra.webp" alt="Zebras in the wild" >
     </picture>
@@ -45,7 +45,7 @@
     <!-- Weather Section -->
 
     <section id="weather">
-      <h2>Weather ⛅<span class="weather-icon">⛅</span></h2>
+      <h2>Weather<span class="weather-icon"><img src="images/2682837_cloud_day_drop_forecast_rain_icon.svg" alt="weather-icon" width="30px" height="30px"></span></h2>
       <p>Temperature: <span id="temp">15</span>°C</p>
       <p>Wind Speed: <span id="wind-speed">6.0</span> km/h</p>
       <p>Wind Chill: <span id="wind-chill">N/A</span></p>
