ammended javascript file

--- a/week04/filtered-temples.html
+++ b/week04/filtered-temples.html
@@ -29,7 +29,7 @@
   </main>
   <script defer src="scripts/filtered-temples.js"></script>
   <footer>&copy; 2024 Sizwe Aquill Xolani Mkhize Republic of South Africa <br>
-    <span id="lastModified"> Last Modified:</span>
+    Last Modified:<span id="lastModified"></span>
 </footer>
 </body>
 </html>
