--- a/week04/filtered-temples.html
+++ b/week04/filtered-temples.html
@@ -28,7 +28,7 @@
     
   </main>
   <script defer src="scripts/filtered-temples.js"></script>
-  <footer>&copy; 2024 Sizwe Aquill Xolani Mkhize Republic of South Africa <br>
+  <footer>&copy;<span id="current-year"></span> 2024 Sizwe Aquill Xolani Mkhize <img src="images/rsz_rsaflag01.webp" alt="sa flag"> Republic of South Africa <img src="images/rsz_rsaflag01.webp" alt="sa flag"> <br>
     Last Modified:<span id="lastModified"></span>
 </footer>
 </body>
