modified footer element

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -151,7 +151,7 @@
   </main>
   <footer>
     <p>Ethekwini Chamber of Businesses &copy; 2024 - Sizwe Mkhize</p>
-    <p><a href="" target="_blank">Site Plan</a></p>
+    <p><a href="siteplan.html" target="_blank">Site Plan</a></p>
     <p><a href="">Contact Us</a></p>
   </footer>
 </body>
