amended the form.html,css,js files

--- a/week05/review.html
+++ b/week05/review.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">th=device-width, initial-scale=1.0">
+    <title>Review Confirmation</title>
+    <link rel="stylesheet" href="styles/form.css">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Confirmation</title>
-    <link rel="stylesheet" href="styles/stylesheet.css">
-    <script src="scripts/form.js"></script>
+    <meta name="viewport" content="WDD 131 Dynamic Web Fundamentals">
+    <script src="scripts/form.js"> </script>
 </head>
 <body>
     <header>
@@ -19,12 +19,6 @@
         <p>>&copy; 2024 Sizwe Aquill Xolani Mkhize Republic of South Africa <br>
             <span id="lastModified"> Last Modified:</span></p>
     </footer>
-    <script>
-        // Increment and Display Review Counter
-        const counter = localStorage.getItem('reviewCounter');
-        const updatedCounter = parseInt(counter) + 1;
-        localStorage.setItem('reviewCounter', updatedCounter);
-        document.getElementById('reviewCount').textContent = updatedCounter;
-    </script>
+
 </body>
 </html>
