--- a/week05/form.html
+++ b/week05/form.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Sizwe Aquill Xolani Mkhize" >
     <meta name="description" content="WDD 131 Dynamic Web Fundamentals">
     <title>Product Review Form</title>
-    <link rel="preconnect" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/form.css">
     
 </head>
@@ -16,7 +16,7 @@
         <h1>Product Review Form</h1>
     </header>
     <main>
-        <form method="get" action="/exercise/reviewform.html">
+        <form method="get" action="review.html">
             <!-- Product Name -->
             <label for="product">Product Name</label>
             <select id="product" name="product" required>
@@ -32,11 +32,11 @@
             <fieldset>
                 <legend>Overall Rating</legend>
                 <section>
-                <label for="rating1"><input type="radio" name="rating" id="rating1" value="1" required> ★ </label>
-                <label for="rating2"><input type="radio" name="rating" id="rating2" value="2" > ★★ </label>    
-                <label for="rating3"><input type="radio" name="rating" id="rating3" value="3">★★★</label>   
-                <label for="rating4"><input type="radio" name="rating" id="rating4" value="4">★★★★</label>
-                <label for="rating5"><input type="radio" name="rating" id="rating5" value="5">★★★★★</label>
+                <label for="fivestars"><input type="radio" name="rating" id="rating1" value="1" required> ★ </label>
+                <label for="fourstars"><input type="radio" name="rating" id="rating2" value="2" > ★★ </label>    
+                <label for="threestars"><input type="radio" name="rating" id="rating3" value="3">★★★</label>   
+                <label for="twostars"><input type="radio" name="rating" id="rating4" value="4">★★★★</label>
+                <label for="onestar"><input type="radio" name="rating" id="rating5" value="5">★★★★★</label>
                 </section>        
             </fieldset>
 
@@ -79,7 +79,7 @@
         </form>
     </main>
     <footer>
-        <p>&copy; 2024 Sizwe Aquill Xolani Mkhize Republic of South Africa <br>
+        <p>&copy; 2024 Sizwe Aquill Xolani Mkhize <br> <img src="/week05/images/rsz_rsaflag01.webp" alt="south african flag" width="15px" height="15">Republic of South Africa<img src="/week05/images/rsz_rsaflag01.webp" alt="south african flag" width="15px" height="15"> <br>
             <span id="lastModified"> Last Modified:</span></p>
     </footer>
     <script src="scripts/form.js" defer></script>
