added some changes and corrections

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Sizwe Aquill Xolani Mkhize" >
+  <meta name="description" content="WDD 131 Dynamic Web Fundamentals">
   <title>Chamber Site Plan</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
   <link rel="icon" href="favicon.ico">
   <link type="text/css" rel="stylesheet" href="styles/siteplan.css" >
 </head>
