--- a/project/ethekwini_chamber.html
+++ b/project/ethekwini_chamber.html
@@ -6,13 +6,31 @@
     <meta name="author" content="Sizwe Aquill Xolani Mkhize">
     <meta name="description" content="WDD 131 Dynamic Web Fundamentals">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style/ethekwini_chamber.css">
+    <link rel="stylesheet" href="styles/ethekwini_chamber.css">
     <title>Ethekwini Chamber of Business</title>
 
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul class="nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Welcome to Ethekwini Chamber of Business</h1>
+            <p>The Ethekwini Chamber exists to uplift and unite businesses while supporting communities.</p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 Ethekwini Chamber of Business</p>
+    </footer>
+    <script src="scripts/ethekwini_chamber.js" defer></script>
 </body>
 </html>
