added changes to modify css and html

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -4,22 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Ethekwini Chamber of Business</title>
-    <link rel="stylesheet" href="styles/ethekwin_chamber.css">
+    <link rel="stylesheet" href="styles/ethekwini_chamber.css">
     <script src="scripts/ethekwini_chamber.js" defer></script>
 </head>
 <body>
     <header>
+        <a id="logo_link" href="ethekwini-chamber.html">
+            <img class="logo" src="images/chamber_logo.webp" alt="ethekwini-chamber_logo" width="200px" height="200px">
+          </a>
         <nav>
             <ul class="nav">
                 <li><a href="ethekwini_chamber.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="contactus.html">Business Directory</a></li>
+                <li><a href="contactus.html">Events</a></li>
+                <li><a href="contactus.html">Community & social Development</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h1>About Us</h1>
-        <p>Our mission is to bridge the gap between businesses and communities, reducing poverty and increasing trust.</p>
+        <p>Our mission is to bridge the gap between businesses<br> and communities, reducing poverty and increasing trust.<br>
+      The chamber of commerce definition is a local organization<br> that gathers business leaders working in the community.<br>
+      The intention is to advance the goals and interests of the<br> organization and others operating in the area. It's<br>
+      usually a group of locally owned businesses that have a <br> common interest.The Chamber of Commerce Network exists to<br>
+      support and connect companies, bringing together firms to <br> build new relationships, share best practice and foster<br>
+      new opportunities.
+    </p>
+    <h2>The benefits of the Chamber of Commerce </h2>
+    <h3>Here are some great reasons to join your local Chamber of Business:</h3>
+    <p>Make business contacts. ...<br>
+        1.Receive chamber newsletters. ...<br>
+        2.Acquire customer referrals. ...<br>
+        3.Bring credibility to your business. ...<br>
+        4.Increase your visibility in the community. ...<br>
+        5.Networking opportunities. ...<br>
+        6.Gain a voice in government. Credibility,<br> Networking opportunities, Advocacy and representation.
+  </p>
     </main>
     <footer>
         <p>© 2024 Ethekwini Chamber of Business</p>
