--- a/project/ethekwini_chamber.html
+++ b/project/ethekwini_chamber.html
@@ -14,19 +14,29 @@
 </head>
 <body>
     <header>
+        <a id="logo_link" href="ethekwini-chamber.html">
+            <img class="logo" src="images/chamber_logo.webp" alt="ethekwini-chamber_logo" width="200px" height="200px">
+          </a>
         <nav>
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="contactus.html">Business Directory</a></li>
+                <li><a href="contactus.html">Events</a></li>
+                <li><a href="contactus.html">Community & social Development</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <h1>Welcome to Ethekwini Chamber of Business</h1>
-            <p>The Ethekwini Chamber exists to uplift and unite businesses while supporting communities.</p>
+            <p class="opening">The Ethekwini Chamber exists to uplift and unite businesses while supporting communities.</p>
         </section>
+        <div>
+            <img src="/project/images/rsz_1building-5523630_1280.jpg" alt="construction image">
+        </div>
+        
     </main>
     <footer>
         <p>© 2024 Ethekwini Chamber of Business</p>
