--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -106,7 +106,7 @@
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      The benefits of the Chamber of Commerce are:Here are some great reasons to join your local Chamber of Commerce:
+      The benefits of the Chamber of Commerce are:Here are some great reasons to join your local Chamber of Business:
       Make business contacts. ...
       Receive chamber newsletters. ...
       Acquire customer referrals. ...
