--- a/project/contactus.html
+++ b/project/contactus.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Ethekwini Chamber of Business</title>
-    <link rel="stylesheet" href="styles/ethekwin_chamber.css">
+    <link rel="stylesheet" href="styles/ethekwini_chamber.css">
 </head>
 <body>
     <header>
+        <a id="logo_link" href="ethekwini-chamber.html">
+            <img class="logo" src="images/chamber_logo.webp" alt="ethekwini-chamber_logo" width="200px" height="200px">
+          </a>
         <nav>
             <ul class="nav">
                 <li><a href="ethekwini_chamber.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="contactus.html">Business Directory</a></li>
+                <li><a href="contactus.html">Events</a></li>
+                <li><a href="contactus.html">Community & social Development</a></li>
             </ul>
         </nav>
     </header>
@@ -30,6 +36,7 @@
             
             <button type="submit">Send</button>
         </form>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.8390616764414!2d30.78236217556748!3d-30.17565723737367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6490040c78acf%3A0xd10853c26fe533b!2sJumping%20Toad%20Creche!5e1!3m2!1sen!2sza!4v1733263903765!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>© 2024 Ethekwini Chamber of Business</p>
