--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -24,27 +24,32 @@
         </nav>
     </header>
     <main>
-        <h1>About Us</h1>
-        <p>Our mission is to bridge the gap between businesses<br> and communities, reducing poverty and increasing trust.<br>
-      The chamber of commerce definition is a local organization<br> that gathers business leaders working in the community.<br>
-      The intention is to advance the goals and interests of the<br> organization and others operating in the area. It's<br>
-      usually a group of locally owned businesses that have a <br> common interest.The Chamber of Commerce Network exists to<br>
-      support and connect companies, bringing together firms to <br> build new relationships, share best practice and foster<br>
-      new opportunities.
-    </p>
-    <h2>The benefits of the Chamber of Commerce </h2>
-    <h3>Here are some great reasons to join your local Chamber of Business:</h3>
-    <p>Make business contacts. ...<br>
-        1.Receive chamber newsletters. ...<br>
-        2.Acquire customer referrals. ...<br>
-        3.Bring credibility to your business. ...<br>
-        4.Increase your visibility in the community. ...<br>
-        5.Networking opportunities. ...<br>
-        6.Gain a voice in government. Credibility,<br> Networking opportunities, Advocacy and representation.
-  </p>
+
+<h1><u>About Us</u></h1>
+<p>Our mission is to bridge the gap between businesses<br> and communities, reducing poverty and increasing trust.<br>
+The chamber of commerce definition is a local organization<br> that gathers business leaders working in the community.<br>
+The intention is to advance the goals and interests of the<br> organization and others operating in the area. It's<br>
+usually a group of locally owned businesses that have a <br> common interest.The Chamber of Commerce Network exists to<br>
+support and connect companies, bringing together firms to <br> build new relationships, share best practice and foster<br>
+new opportunities.</p>
+
+
+<h2><u>The benefits of the Chamber of Commerce</u><br><br> 
+Here are some great reasons to join your local Chamber of Business:</h2>
+<p>Make business contacts. ...<br>
+1.Receive chamber newsletters. ...<br>
+2.Acquire customer referrals. ...<br>
+3.Bring credibility to your business. ...<br>
+4.Increase your visibility in the community. ...<br>
+5.Networking opportunities. ...<br>
+6.Gain a voice in government.<br> 
+7.Credibility,Networking opportunities, Advocacy and representation.
+</p>
     </main>
-    <footer>
-        <p>© 2024 Ethekwini Chamber of Business</p>
+
+    <footer><p>&copy;<span id="current-year"></span>2024 Ethekwini Chamber of Business | Sizwe Aquill Xolani Mkhize <img src="images/rsz_rsaflag01.webp" alt="sa flag" width="15px" height="15px"> Republic of South Africa <img src="images/rsz_rsaflag01.webp" alt="sa flag"  width="15px" height="15px"></p><br>
+        Last Modified:<span id="lastModified"></span>
     </footer>
+
 </body>
 </html>
