--- a/project/contactus.html
+++ b/project/contactus.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="logo_link" href="ethekwini-chamber.html">
-            <img class="logo" src="images/chamber_logo.webp" alt="ethekwini-chamber_logo" width="200px" height="200px">
+            <img class="logo" src="images/chamber_logo.webp" alt="ethekwini-chamber_logo" width="150px" height="150px">
           </a>
         <nav>
             <ul class="nav">
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <h1>Contact Us</h1>
+        <h1>Contact Us</h1><hr>
         <form id="contactForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -35,11 +35,12 @@
             <textarea id="message" name="message" required></textarea>
             
             <button type="submit">Send</button>
-        </form>
+        </form><hr>
+        <legend><strong>Directions to our Offices</strong></legend>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.8390616764414!2d30.78236217556748!3d-30.17565723737367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6490040c78acf%3A0xd10853c26fe533b!2sJumping%20Toad%20Creche!5e1!3m2!1sen!2sza!4v1733263903765!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer>
-        <p>© 2024 Ethekwini Chamber of Business</p>
+    <footer>&copy;<span id="current-year"></span> 2024 Sizwe Aquill Xolani Mkhize <img src="images/rsz_rsaflag01.webp" alt="sa flag" width="15px" height="15px"> Republic of South Africa <img src="images/rsz_rsaflag01.webp" alt="sa flag" width="15px" height="15px"> <br>
+        Last Modified:<span id="lastModified"></span>
     </footer>
     <script src="scripts/ethekwini_chamber.js"></script>
 </body>
