--- a/project/ethekwini_chamber.html
+++ b/project/ethekwini_chamber.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <h1>Welcome to Ethekwini Chamber of Business</h1>
-    <div><img src="images/rsz_1luke-besley-k5l-zbrspds-unsplash.jpg" alt="" width="1450" height="600"></div>
+    <div><img src="images/rsz_1luke-besley-k5l-zbrspds-unsplash.jpg" alt="construction site" width="1450" height="600"></div>
     <p class="mission">The Ethekwini Chamber exists to uplift and unite businesses while supporting communities.</p>
     <main class="home-grid">
         <section class="text-card">
@@ -48,16 +48,16 @@
 </p>
         </section>
         <section class="smme-card">
-        <a href=""><img src="images/rsz_120241113_174720.jpg" alt="" width="200" height="250"></a>
+        <a href=""><img src="images/rsz_120241113_174720.jpg" alt="small entrepreneur" width="200" height="250"></a>
           <h2>SMME's</h2>
         </section>
         <section class="events-card">
-        <a href=""><img src="images/rsz_1clem-onojeghuo-zzza888fskg-unsplash.jpg" alt="" width="200" height="250"></a>
+        <a href=""><img src="images/rsz_1clem-onojeghuo-zzza888fskg-unsplash.jpg" alt=" staircase-site" width="200" height="250"></a>
           <h2>Events</h2>
         </section>
 
         <section class="community-card">
-        <a href=""><img src="images/rsz_etienne-girardet-sgyamizhahg-unsplash.jpg" alt="" width="200" height="250"></a>
+        <a href=""><img src="images/rsz_etienne-girardet-sgyamizhahg-unsplash.jpg" alt="steelwork construction site" width="200" height="250"></a>
           <h2>Community service</h2>
         </section>
 
@@ -79,15 +79,15 @@
         </section>
         
         <section class="service-card">
-          <a href=""><img src="images/rsz_1elvir-k-xtyh5b5ggx4-unsplash.jpg" alt="" width="200" height="250"></a>
+          <a href=""><img src="images/rsz_1elvir-k-xtyh5b5ggx4-unsplash.jpg" alt="Machine groundwork" width="200" height="250"></a>
           <h2>Service</h2>
         </section>
         <section class="news-card">
-          <a href=""><img src="images/rsz_1shane-mclendon-9jpjrfltbi0-unsplash.jpg" alt="" width="200" height="250"></a>
+          <a href=""><img src="images/rsz_1shane-mclendon-9jpjrfltbi0-unsplash.jpg" alt="Carpenter at work" width="200" height="250"></a>
           <h2>News</h2>
         </section>
         <section class="operations-card">
-        <a href=""><img src="images/rsz_1greyson-joralemon-a1g0oex29ec-unsplash.jpg" alt="" width="200" height="250"></a>
+        <a href=""><img src="images/rsz_1greyson-joralemon-a1g0oex29ec-unsplash.jpg" alt="Concrete hoisted at site" width="200" height="250"></a>
           <h2>Operations</h2>
         </section>
              
