--- a/project/ethekwini_chamber.html
+++ b/project/ethekwini_chamber.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <h1>Welcome to Ethekwini Chamber of Business</h1>
-    <div><img src="images/rsz_1luke-besley-k5l-zbrspds-unsplash.jpg" alt="construction site" width="1450" height="600"></div>
+    <div><img src="images/rsz_1luke-besley-k5l-zbrspds-unsplash.jpg" alt="construction site" width="1450" height="600" loading="lazy"></div>
     <p class="mission">The Ethekwini Chamber exists to uplift and unite businesses while supporting communities.</p>
     <main class="home-grid">
         <section class="text-card">
@@ -48,21 +48,21 @@
 </p>
         </section>
         <section class="smme-card">
-        <a href=""><img src="images/rsz_120241113_174720.jpg" alt="small entrepreneur" width="200" height="250"></a>
+        <a href="ethekwini_chamber.html"><img src="images/rsz_120241113_174720.jpg" alt="small entrepreneur" width="200" height="250" loading="lazy"></a>
           <h2>SMME's</h2>
         </section>
         <section class="events-card">
-        <a href=""><img src="images/rsz_1clem-onojeghuo-zzza888fskg-unsplash.jpg" alt=" staircase-site" width="200" height="250"></a>
+        <a href="ethekwini_chamber.html"><img src="images/rsz_1clem-onojeghuo-zzza888fskg-unsplash.jpg" alt=" staircase-site" width="200" height="250" loading="lazy"></a>
           <h2>Events</h2>
         </section>
 
         <section class="community-card">
-        <a href=""><img src="images/rsz_etienne-girardet-sgyamizhahg-unsplash.jpg" alt="steelwork construction site" width="200" height="250"></a>
+        <a href="ethekwini_chamber.html"><img src="images/rsz_etienne-girardet-sgyamizhahg-unsplash.jpg" alt="steelwork construction site" width="200" height="250" loading="lazy"></a>
           <h2>Community service</h2>
         </section>
 
         <section class="joiningform">
-          <form id="contactForm">
+          <form id="contactForm" >
             <legend><u><strong>Donations/Sponsors Form</strong></u></legend>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -79,22 +79,22 @@
         </section>
         
         <section class="service-card">
-          <a href=""><img src="images/rsz_1elvir-k-xtyh5b5ggx4-unsplash.jpg" alt="Machine groundwork" width="200" height="250"></a>
+          <a href="ethekwini_chamber.html"><img src="images/rsz_1elvir-k-xtyh5b5ggx4-unsplash.jpg" alt="Machine groundwork" width="200" height="250" loading="lazy"></a>
           <h2>Service</h2>
         </section>
         <section class="news-card">
-          <a href=""><img src="images/rsz_1shane-mclendon-9jpjrfltbi0-unsplash.jpg" alt="Carpenter at work" width="200" height="250"></a>
+          <a href="ethekwini_chamber.html"><img src="images/rsz_1shane-mclendon-9jpjrfltbi0-unsplash.jpg" alt="Carpenter at work" width="200" height="250" loading="lazy"></a>
           <h2>News</h2>
         </section>
         <section class="operations-card">
-        <a href=""><img src="images/rsz_1greyson-joralemon-a1g0oex29ec-unsplash.jpg" alt="Concrete hoisted at site" width="200" height="250"></a>
+        <a href="ethekwini_chamber.html"><img src="images/rsz_1greyson-joralemon-a1g0oex29ec-unsplash.jpg" alt="Concrete hoisted at site" width="200" height="250" loading="lazy"></a>
           <h2>Operations</h2>
         </section>
              
   <script defer src="scripts/ethekwini-chamber.js"></script>
     </main>
     <footer>
-        <p>© 2024 <span id="current-year"></span> Ethekwini Chamber of Business | Sizwe Aquill Xolani Mkhize <br> <img src="images/rsz_rsaflag01.webp" alt="south african flag" width="15" height="15">Republic of South Africa<img src="images/rsz_rsaflag01.webp" alt="south african flag" width="15" height="15"> <br>
+        <p>© 2024 <span id="current-year"></span> Ethekwini Chamber of Business | Sizwe Aquill Xolani Mkhize <br> <img src="images/rsz_rsaflag01.webp" alt="south african flag" width="15" height="15" loading="lazy">Republic of South Africa<img src="images/rsz_rsaflag01.webp" alt="south african flag" width="15" height="15" loading="lazy"> <br>
              Last Modified:<span id="lastModified"></span></p>
     </footer>
     <script src="scripts/ethekwini_chamber.js" defer></script>
