--- a/project/ethekwini_chamber.html
+++ b/project/ethekwini_chamber.html
@@ -19,9 +19,9 @@
           </a>
         <nav>
             <ul class="nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="ethekwini_chamber.html">Home</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contactus.html">Business Directory</a></li>
                 <li><a href="contactus.html">Events</a></li>
                 <li><a href="contactus.html">Community & social Development</a></li>
@@ -61,7 +61,7 @@
         </section>
 
         <section class="joiningform">
-          <form id="contactForm" >
+          <form id="donationForm" >
             <h2><u><strong>Donations/Sponsors Form</strong></u></h2>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
