--- a/exercises forpractise/proj3/main.html
+++ b/exercises forpractise/proj3/main.html
@@ -9,6 +9,32 @@
     <h1>Random Quote Generator</h1>
     <p id="quote"></p>
     <button onclick="generateQuote()">GENERATE QUOTE</button>
+    <!-- Form which will send a GET request to the current URL -->
+<form method="get">
+    <label>
+      Name:
+      <input name="submitted-name" autocomplete="name" />
+    </label>
+    <button>Save</button>
+  </form>
+  
+  <!-- Form which will send a POST request to the current URL -->
+  <form method="post">
+    <label>
+      Name:
+      <input name="submitted-name" autocomplete="name" />
+    </label>
+    <button>Save</button>
+  </form>
+  
+  <!-- Form with fieldset, legend, and label -->
+  <form method="post">
+    <fieldset>
+      <legend>Do you agree to the terms?</legend>
+      <label><input type="radio" name="radio" value="yes" /> Yes</label>
+      <label><input type="radio" name="radio" value="no" /> No</label>
+    </fieldset>
+  </form>
     <script src="index.js" defer></script>
 </body>
 </html>
