--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -17,7 +17,7 @@
     <img src="images/chamber_logo1.webp" alt="logo">
     <h1>Ethekwini Chamber of Business Site Plan</h1>
     <h2>Sizwe Mkhize</h2>
-    <h2>WDD 131 - Dynamic Web Fundamentals</h2>
+    <h2>WDD 231 -Web Front end Developmental</h2>
     
   </header>
   <main>
